# CppSand

./: .gitignore  README.md  SandRenderer.h  debug.sh  main.cpp  meson.build  release.sh  release_windows.sh  x86_64-w64-mingw32.txt
.cache/clangd/index/: BaseParticle.cpp.35A1590C54EB35C5.idx  BaseParticle.hpp.15AE338DE69B3FF6.idx  main.cpp.501FB3D9DC7C7A19.idx
src/: Globals.h  SandRenderer.h  SandSim.h
